overflow repaired

--- a/client/src/components/Card/card.module.css
+++ b/client/src/components/Card/card.module.css
@@ -54,23 +54,27 @@
     padding: 1px;
     background-color: #8b0510;
     color:white;
-    max-width: 250px;
+    max-width: 400px;
     height: 30px;
     width: 240px;
-    margin-left: -18px;
+    margin-left: -25px;
     border-radius: 15px;
-    white-space:pre;
-    text-overflow: ellipsis;
 }
 
-.nametxt {
-    white-space:pre;
-    display: inline-block;
+.textOverflow{
+    white-space: nowrap;
     text-overflow: ellipsis;
+    overflow: hidden;
+}
+.nametxt {
+    display: inline-block;
     max-height: 2px;
     color:#731502;
     margin: -1px;
     font-size: 16px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 
